Heart rate calculation now shows a list of suggested songs based on the average BPM data collected

--- a/Heartbeat/Pulse/Pulse View Controllers/PulseViewController.xib
+++ b/Heartbeat/Pulse/Pulse View Controllers/PulseViewController.xib
@@ -12,6 +12,7 @@
             <connections>
                 <outlet property="previewLayer" destination="0aN-vq-deg" id="VxS-9w-hOh"/>
                 <outlet property="previewLayerShadowView" destination="j09-ff-bWz" id="hag-l0-FgL"/>
+                <outlet property="progressBar" destination="lJh-Q3-J96" id="wuH-Ae-tol"/>
                 <outlet property="pulseLabel" destination="3O5-4f-Au5" id="7tS-dE-k81"/>
                 <outlet property="thresholdLabel" destination="VGJ-w1-GMp" id="459-bj-wMV"/>
                 <outlet property="view" destination="iN0-l3-epB" id="XSU-X5-aMR"/>
@@ -23,7 +24,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="j09-ff-bWz">
-                    <rect key="frame" x="147" y="388" width="120" height="120"/>
+                    <rect key="frame" x="83" y="206" width="248" height="248"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 </view>
@@ -33,25 +34,29 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0aN-vq-deg">
-                    <rect key="frame" x="147" y="388" width="120" height="120"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3O5-4f-Au5">
-                    <rect key="frame" x="20" y="524" width="374" height="21"/>
+                    <rect key="frame" x="20" y="490" width="374" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VGJ-w1-GMp">
-                    <rect key="frame" x="68" y="553" width="278" height="55"/>
+                    <rect key="frame" x="68" y="511" width="278" height="55"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" fixedFrame="YES" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="lJh-Q3-J96">
+                    <rect key="frame" x="68" y="600" width="278" height="4"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                </progressView>
+                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0aN-vq-deg">
+                    <rect key="frame" x="83" y="206" width="248" height="248"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
