--- a/Heartbeat/Base.lproj/Main.storyboard
+++ b/Heartbeat/Base.lproj/Main.storyboard
@@ -2033,6 +2033,13 @@ Apple Music</string>
                                     <constraint firstAttribute="height" constant="59" id="sWS-gS-1br"/>
                                 </constraints>
                             </imageView>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Recommended for you" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vuO-Fa-pMs" userLabel="Selected Recommended Playlist">
+                                <rect key="frame" x="68" y="69" width="277" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="28"/>
+                                <color key="textColor" systemColor="systemGray4Color"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HzW-qL-FcW" userLabel="Back Button">
                                 <rect key="frame" x="20" y="70" width="25" height="25"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -2316,6 +2323,7 @@ Apple Music</string>
                         <outlet property="searchIcon" destination="ruK-RU-WH4" id="SRD-6p-GT9"/>
                         <outlet property="searchView" destination="XV3-Qd-hSA" id="4ti-7V-69C"/>
                         <outlet property="second_recomm" destination="mej-v5-uF5" id="tmX-Y5-Ayj"/>
+                        <outlet property="selectedPlaylistLabel" destination="vuO-Fa-pMs" id="vnj-eQ-kr2"/>
                         <outlet property="slowButton" destination="IAU-Zp-KZ2" id="Ks4-H9-f4y"/>
                         <outlet property="slowLabel" destination="0hu-DP-TWR" id="SsJ-JD-MH2"/>
                         <outlet property="slow_pageCtrl" destination="nP8-2d-Fff" id="XiO-8E-WUc"/>
