--- a/Heartbeat/Base.lproj/Main.storyboard
+++ b/Heartbeat/Base.lproj/Main.storyboard
@@ -1862,9 +1862,10 @@ Apple Music</string>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jbf-UB-oj5" userLabel="Profile View">
                                 <rect key="frame" x="0.0" y="91" width="414" height="737"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="general_profile" translatesAutoresizingMaskIntoConstraints="NO" id="O5m-7L-eJS">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="O5m-7L-eJS">
                                         <rect key="frame" x="81" y="47" width="252" height="252"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="default"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="username" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FEw-JA-G7M" userLabel="Username">
                                         <rect key="frame" x="8" y="307" width="398" height="34"/>
@@ -1941,6 +1942,9 @@ Apple Music</string>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
                                         <state key="normal" title="Edit"/>
+                                        <connections>
+                                            <action selector="changePicture:" destination="SF3-sz-NiH" eventType="touchUpInside" id="MvZ-wf-HOm"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9gx-Tw-iSt" userLabel="Edit Profile Button">
                                         <rect key="frame" x="334" y="47" width="59" height="43"/>
@@ -2327,7 +2331,6 @@ Apple Music</string>
         <image name="chevron.backward" catalog="system" width="96" height="128"/>
         <image name="chevron.left" catalog="system" width="96" height="128"/>
         <image name="circle.fill" catalog="system" width="128" height="121"/>
-        <image name="general_profile" width="640" height="640"/>
         <image name="heart" catalog="system" width="128" height="109"/>
         <image name="house" catalog="system" width="128" height="106"/>
         <image name="logo_neon" width="600" height="600"/>
